[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gtools"
version = "0.0.1"
authors = [
  { name="Christopher Cox", email="chriscox@lsu.edu" },
]
description = "Wrappers to google-cloud-storage that facilitate the Time Varying Reader project"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/MCooperBorkenhagen/gtools"
Issues = "https://github.com/MCooperBorkenhagen/gtools/issues"
